--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ aiosqlite==0.19.0
 annotated-types==0.6.0
 anyio==4.2.0
 certifi==2023.11.17
+cffi==1.16.0
 click==8.1.7
 colorama==0.4.6
+cryptography==42.0.5
 databases==0.8.0
 dnspython==2.4.2
 email-validator==2.1.0.post1
@@ -18,10 +20,12 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 orjson==3.9.10
+pycparser==2.21
 pydantic==2.5.3
 pydantic-extra-types==2.3.0
 pydantic-settings==2.1.0
 pydantic_core==2.14.6
+PyJWT==2.8.0
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0.1
