--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,17 @@
-aiosqlite==0.20.0
 annotated-types==0.6.0
 anyio==4.3.0
 certifi==2024.2.2
-cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-cryptography==42.0.5
 databases==0.9.0
 fastapi==0.110.0
 greenlet==3.0.3
 h11==0.14.0
 idna==3.6
-jwt==1.3.1
-pycparser==2.22
 pydantic==2.6.4
 pydantic_core==2.16.3
+PyJWT==2.8.0
 requests==2.31.0
 sniffio==1.3.1
 SQLAlchemy==2.0.29
